# partitions

./: Cargo.toml
src/: lib.rs  partition_methods.rs  permutations.rs
src/partition_methods/: category_metrics.rs  football_partition.rs  multiway_partition.rs  preserve_information.rs
src/permutations/: exhaustive_finder.rs
