[package]
name = "partition_methods"
version = "0.1.0"
authors = ["Eden Hyacinth <lissahyacinth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = true
panic = "unwind"
overflow-checks = true